--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -10,7 +10,7 @@
       </div>
     </form>
   </div>
-  <div [hidden]="!resp.letra">
+  <div [hidden]="!resp.id">
     <table class="table">
       <thead class="thead-dark">
         <tr>
